--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -2,7 +2,8 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/saweria.css'
-
+import '../styles/slides.css'
+import '../styles/balloon.css'
 interface Props {
   title: string
   description: string
