--- a/src/styles/saweria.css
+++ b/src/styles/saweria.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'IBM Plex Mono', 'Niramit', monospace;
+  margin: 0;
+  overflow: hidden;
+  background: #fff;
+  color: #333;
 }
 
 /* header */
