--- a/src/pages/landing.astro
+++ b/src/pages/landing.astro
@@ -1,16 +1,22 @@
 ---
+import Header from '../components/saweria/Header.astro';
+import Navbar from '../components/saweria/Navbar.astro'
 import Card from '../components/saweria/Card.astro'
 import Layout from '../layouts/SeedBKK.astro'
+import Footer from '../components/Footer.astro';
 const msg =
   'หกวันแห่งการทรงสร้างและวันสะบาโต1ในปฐมกาล พระเจ้าทรงเนรมิตสร้างฟ้าและแผ่นดิน 2แผ่นดินก็ร้างและว่างเปล่า ความมืดอยู่เหนือน้ำ และพระวิญญาณของพระเจ้าทรงปกอยู่เหนือน้ำนั้น3พระเจ้าตรัสว่า “จงเกิดความสว่าง” ความสว่างก็เกิดขึ้น 4พระเจ้าทรงเห็นว่าความสว่างนั้นดี และทรงแยกความสว่างออกจากความมืด 5พระเจ้าทรงเรียกความสว่างนั้นว่า วัน และความมืดนั้นว่า คืน มีเวลาเย็นและเวลาเช้า เป็นวันแรก6พระเจ้าตรัสว่า “จงมีภาคพื้นในระหว่างน้ำ แยกน้ำออกจากกัน” 7พระเจ้าทรงสร้างภาคพื้นนั้นขึ้น แล้วทรงแยกน้ำที่อยู่ใต้ภาคพื้นออกจากน้ำที่อยู่เหนือภาคพื้น ก็เป็นดังนั้น 8พระเจ้าจึงทรงเรียกภาคพื้นนั้นว่า ฟ้า มีเวลาเย็นและเวลาเช้า เป็นวันที่สอง'
 ---
 
-<Layout
-  title="About Me"
-  description="Lorem ipsum dolor sit amet"
-  pubDate={new Date('August 08 2021')}
->
-  <Card
-    body="หกวันแห่งการทรงสร้างและวันสะบาโต1ในปฐมกาล พระเจ้าทรงเนรมิตสร้างฟ้าและแผ่นดิน 2แผ่นดินก็ร้างและว่างเปล่า ความมืดอยู่เหนือน้ำ และพระวิญญาณของพระเจ้าทรงปกอยู่เหนือน้ำนั้น3พระเจ้าตรัสว่า “จงเกิดความสว่าง” ความสว่างก็เกิดขึ้น 4พระเจ้าทรงเห็นว่าความสว่างนั้นดี และทรงแยกความสว่างออกจากความมืด 5พระเจ้าทรงเรียกความสว่างนั้นว่า วัน และความมืดนั้นว่า คืน มีเวลาเย็นและเวลาเช้า เป็นวันแรก6พระเจ้าตรัสว่า “จงมีภาคพื้นในระหว่างน้ำ แยกน้ำออกจากกัน” 7พระเจ้าทรงสร้างภาคพื้นนั้นขึ้น แล้วทรงแยกน้ำที่อยู่ใต้ภาคพื้นออกจากน้ำที่อยู่เหนือภาคพื้น ก็เป็นดังนั้น 8พระเจ้าจึงทรงเรียกภาคพื้นนั้นว่า ฟ้า มีเวลาเย็นและเวลาเช้า เป็นวันที่สอง"
-  />
+<Layout title="About Me" description="Lorem ipsum dolor sit amet" pubDate={new Date('August 08 2021')}>
+  <Navbar />
+
+  <Header />
+
+  <Card body={msg} />
+
+  
+  <Card body={msg} />
+  <Card body="The Seed Of Bangkok City Church" />
+  <Footer></Footer>
 </Layout>
