--- a/src/components/saweria/CardWithTap.astro
+++ b/src/components/saweria/CardWithTap.astro
@@ -7,7 +7,7 @@ interface Props {
 const { title, body } = Astro.props
 ---
 
-<div class="custom-mulai container">
+<div class="custom-pricing container">
   <div class="col-md-12 col-sm-12 col-12">
     <div class="kanan">
       <p>{title}</p>
