--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -6,7 +6,7 @@ import '../../styles/navbar.css'
   <div class="d-flex justify-content-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light  navbar-line-seedbkk">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">SeedBKK</a>
+        <a class="navbar-brand title-futuraHandwritten" href="#">SeedBKK</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -21,25 +21,28 @@ import '../../styles/navbar.css'
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-lg-0 mb-2 me-auto">
             <li class="nav-item">
-              <a class="nav-link  fw-bold fs-4" aria-current="page" href="#">Home</a>
+              <a class="nav-link  fw-bold fs-4 title-futuraHandwritten" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold fs-4" href="#">Activity</a>
+              <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="#">Worship</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="#">Our Chuch</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle fw-bold fs-4"
+                class="nav-link dropdown-toggle fw-bold fs-4 title-futuraHandwritten"
                 href="#"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Dropdown
+                Vision
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">หลักข้อเชื่อ</a></li>
+                <li><a class="dropdown-item" href="#">เกี่ยวกับเรา</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
