--- a/src/pages/landing.astro
+++ b/src/pages/landing.astro
@@ -2,11 +2,16 @@
 import Header from '../components/saweria/Header.astro';
 import Navbar from '../components/saweria/Navbar.astro'
 import Card from '../components/saweria/Card.astro'
+import CardWithTap from '../components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '../components/Footer.astro';
 const msg =
-  'หกวันแห่งการทรงสร้างและวันสะบาโต1ในปฐมกาล พระเจ้าทรงเนรมิตสร้างฟ้าและแผ่นดิน 2แผ่นดินก็ร้างและว่างเปล่า ความมืดอยู่เหนือน้ำ และพระวิญญาณของพระเจ้าทรงปกอยู่เหนือน้ำนั้น3พระเจ้าตรัสว่า “จงเกิดความสว่าง” ความสว่างก็เกิดขึ้น 4พระเจ้าทรงเห็นว่าความสว่างนั้นดี และทรงแยกความสว่างออกจากความมืด 5พระเจ้าทรงเรียกความสว่างนั้นว่า วัน และความมืดนั้นว่า คืน มีเวลาเย็นและเวลาเช้า เป็นวันแรก6พระเจ้าตรัสว่า “จงมีภาคพื้นในระหว่างน้ำ แยกน้ำออกจากกัน” 7พระเจ้าทรงสร้างภาคพื้นนั้นขึ้น แล้วทรงแยกน้ำที่อยู่ใต้ภาคพื้นออกจากน้ำที่อยู่เหนือภาคพื้น ก็เป็นดังนั้น 8พระเจ้าจึงทรงเรียกภาคพื้นนั้นว่า ฟ้า มีเวลาเย็นและเวลาเช้า เป็นวันที่สอง'
+  
+"โลกเราถูกสร้างขึ้นอย่างมีระบบระเบียบ ต้นไม้ที่ดูดซับแก๊สคาร์บอนไดออกไซด์และปล่อยแก๊สออกซิเจนในเวลากลางวัน การเกิดน้ำขึ้นน้ำลงเพราะแรงดึงดูดจากดวงจันทร์ รวมไปถึงระบบต่างๆ ในร่างกายของมนุษย์ที่มีความซับซ้อน เช่น ระบบหมุนเวียนเลือด ระบบขับถ่าย ระบบประสาท เป็นต้น หากระบบต่างๆ เหล่านี้ทำงานผิดเพี้ยนไปโลกของเราก็คงไม่สามารถดำรงอยู่ได้ หากโลกเกิดจากการระเบิดครั้งใหญ่ การระเบิดนั้นสร้างสิ่งที่เป็นระเบียบเหล่านี้ได้หรือ ต้องเกิดความบังเอิญมากเท่าไรจึงจะเกิดระบบที่สมบูรณ์และพอดีขนาดนี้ สิ่งต่างๆ ล้วนราวกับว่าถูกออกแบบและสร้างโดยใครบางคน ผู้ที่ออกแบบและสร้างสิ่งต่างๆ เหล่านี้เองที่คริสเตียนเรียกว่าพระเจ้า"
+
+const msg2= `เราฟังเทศและ worship ไปด้วยกันไปหาอะไรกินกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส`
 ---
+
 
 <Layout title="About Me" description="Lorem ipsum dolor sit amet" pubDate={new Date('August 08 2021')}>
   <Navbar />
@@ -14,9 +19,21 @@ const msg =
   <Header />
 
   <Card body={msg} />
-
-  
   <Card body={msg} />
+  
+  <CardWithTap title="What We do?" body={msg2}/>
+  <div class="container custom-gabung">
+    <div class="col-md-12 col-sm-12 col-12">
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text">
+                    <p class="card-text title-futuraHandwritten"> teen chuch new gen<p>
+                    โบสวัยรุ่นเพื่อวัยรุ่น คริสเตียนเพื่อคริสเตียน โบสวัยรุ่นเพื่อคริสเตียน
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
   <Card body="The Seed Of Bangkok City Church" />
   <Footer></Footer>
 </Layout>
