--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -1,10 +1,9 @@
 <div class="container custom-header">
     <div class="custom-header-title">
         <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
-        <h4 >คริสตจักรเมล็ดพันธุ์กรุงเทพ </h4>
     </div>
     <div class="custom-nav">
-        <a class="btn btn-enter" href="#">รู้จักพระเจ้า?</a>
-        <a class="btn btn-list" href="#">เพิ่มเติม</a>
+        <a class="btn btn-enter" href="#">พระเจ้ามีจริงไหม?</a>
+        <a class="btn btn-list" href="#">เราทำอะไร?</a>
     </div>
 </div>
