--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -1,6 +1,7 @@
 <div class="container custom-header">
     <div class="custom-header-title">
         <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
+        <img  class="img-fluid rounded" width={600} height={272} src="/seed-anime.gif"  alt="" />
     </div>
     <div class="custom-nav">
         <a class="btn btn-enter" href="#">พระเจ้ามีจริงไหม?</a>
