--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -6,7 +6,8 @@ import '../../styles/navbar.css'
   <div class="d-flex justify-content-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light  navbar-line-seedbkk">
       <div class="container-fluid">
-        <a class="navbar-brand title-futuraHandwritten" href="#">SeedBKK</a>
+        <img  class="rounded" width={48} height={48} src="/SEED_CHURCH_LOGO_3.png" alt="" />
+        <a class="navbar-brand title-futuraHandwritten" href="#">   SeedBKK</a>
         <button
           class="navbar-toggler"
           type="button"
