--- a/src/components/saweria/CardWithTap.astro
+++ b/src/components/saweria/CardWithTap.astro
@@ -22,7 +22,7 @@ console.log(`imags: ${imageCovers}`)
           
           {imageCovers.map(item => 
           <br/>
-          <img class=" img-fluid d-block mx-auto rounded" width={500} height={300} src={item} alt="" />)}
+          <img class="opacity-75 img-fluid d-block mx-auto rounded" width={500} height={300} src={item} alt="" />)}
         </p>
       </div>
     </div>
