--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -1,10 +1,20 @@
-<div class="container custom-header">
-    <div class="custom-header-title">
-        <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
-        <img  class="img-fluid rounded" width={600} height={272} src="/seed-anime.gif"  alt="" />
-    </div>
-    <div class="custom-nav">
-        <a class="btn btn-enter" href="#">พระเจ้ามีจริงไหม?</a>
-        <a class="btn btn-list" href="#">เราทำอะไร?</a>
-    </div>
+---
+const isHasGod =
+  'https://www.seedchurch-thailand.com/%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%88-%E0%B8%B2'
+---
+
+<div class="custom-header container">
+  <div class="custom-header-title">
+    <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
+    <h4 class="">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h1>
+    <img class="img-fluid rounded" width={600} height={272} src="/seed-anime.gif" alt="" />
+  </div>
+  <div class="custom-nav">
+    <a class="btn btn-enter" href={isHasGod}
+      >พระเจ้ามีจริงไหม? <img height={32} width={32} src="/icons/JESUS.png" alt="" /></a
+    >
+    <a class="btn btn-list" href="https://line.me/R/ti/p/@501gghbd">
+      Join SeedBKK <img height={32} width={32} src="/icons/LINE_Brand_icon.png" alt="" /></a
+    >
+  </div>
 </div>
