--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -11,7 +11,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     <div class="d-flex justify-content-center">
       <div class="bg-border-time">
         <h3 class="title-futuraHandwritten border-time">
-          <img src="/icons/stopwatch.png" alt="" width="32" height="32" class="rounded" />
+          <img src="./icons/stopwatch.png" alt="" width="32" height="32" class="rounded" />
            Worship time Sunday 14.00-16.00
         </h3>
       </div>
