--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -11,10 +11,10 @@ const isHasGod =
   </div>
   <div class="custom-nav">
     <a class="btn btn-enter" href={isHasGod}
-      >พระเจ้ามีจริงไหม? <img height={32} width={32} src="/icons/JESUS.png" alt="" /></a
+      >พระเจ้ามีจริงไหม? <img height={32} width={32} src="./icons/JESUS.png" alt="" /></a
     >
     <a class="btn btn-list" href="https://line.me/R/ti/p/@501gghbd">
-      Join SeedBKK <img height={32} width={32} src="/icons/LINE_Brand_icon.png" alt="" /></a
+      Join SeedBKK <img height={32} width={32} src="./icons/LINE_Brand_icon.png" alt="" /></a
     >
   </div>
 </div>
