--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const msg = `เราคือชุมชนคริสเตียน คร
 
 const msg2 = `เราฟังเทศและ worship ไปด้วยกันไปหาอะไรกินกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส`
 const msg3 = `เราเป็นโบสเล็กๆที่เพิ่งตั้งในองค์กรคริสจักรเมล็ดพันธุ์ที่สังกัดสหกินคริสเตียน  เรามีสมาชิกที่เป็นกลุ่มนักศึกษาและกลุ่มคนวัยทำงาน เราเน้นความเป็นสมัยใหม่เท่าที่จะทำได้`
-const imagesCover = ['/covers/1.jpg', '/covers/2.jpg']
+const imagesCover = ['./covers/1.jpg', './covers/2.jpg']
 ---
 
 <Layout title="ＳＥＥＤＢＫＫ" description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น" pubDate={new Date('Septerber 09 2023')}>
@@ -23,7 +23,7 @@ const imagesCover = ['/covers/1.jpg', '/covers/2.jpg']
   <br>
   <div class="custom-content container">
     <div class="col-md-12 col-sm-12 col-12  " >
-      <img class="img-fluid rounded"  src="/peep_characters.png" alt="" />
+      <img class="img-fluid rounded"  src="./peep_characters.png" alt="" />
     </div>
   </div>
   <CardWithTap title="What We do?" body={msg2} />
