--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -21,7 +21,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     <div class="d-flex justify-content-center test" >
       <nav class="navbar navbar-expand-lg navbar-light navbar-line-seedbkk">
         <div class="container-fluid">
-          <img class="rounded" width={48} height={48} src="/SEED_CHURCH_LOGO_3.png" alt="" />
+          <img class="rounded" width={48} height={48} src="./SEED_CHURCH_LOGO_3.png" alt="" />
           <a class="navbar-brand title-futuraHandwritten" href="#"> SeedBKK</a>
           <button
             class="navbar-toggler"
@@ -92,7 +92,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     <div class="d-flex justify-content-center">
       <div class="border-travel"> 
        
-        เดินทางโดยรถไฟฟ้า BTS   <img src="/icons/railway.png"  width={48} height={48}/> ลงสถานีราชเทวี ออกประตูโรงแรมเอเชีย เดินมาทางขวา 130เมตร
+        เดินทางโดยรถไฟฟ้า BTS   <img src="./icons/railway.png"  width={48} height={48}/> ลงสถานีราชเทวี ออกประตูโรงแรมเอเชีย เดินมาทางขวา 130เมตร
       </div>
     </div>
   </div>
