--- a/src/components/saweria/Social.astro
+++ b/src/components/saweria/Social.astro
@@ -1,6 +1,6 @@
 <div class="social-links">
   <a href="https://www.facebook.com/seedchurchthailand" target="_blank">
-    <img src="./SEED_CHURCH_LOGO_3.png" width={64} height={64} />
+    <img src="./icons/railway.png" width={64} height={64} />
   </a>
   <a href="https://goo.gl/maps/jUL12yHi1JzQgmYx9" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 100 100">
