--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,9 @@ const today = new Date()
 ---
 
 <footer>
-  &copy; {today.getFullYear()} Seed Church Thailand. All rights reserved
+  <a href="https://www.facebook.com/seedchurchthailand" target="_blank">
+    <img src="./SEED_CHURCH_LOGO_3.png" width={64} height={64} />
+  </a> MADE WITH THE ❤️ 
   <Social />
 </footer>
 <style>
