--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -37,7 +37,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-lg-0 mb-2 me-auto">
               <li class="nav-item">
-                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="#">News</a>
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="#">Card</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href={ourChruch}>Our Chuch</a>
