--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,32 +5,33 @@ import Card from '$components/saweria/Card.astro'
 import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
+import Test from '@/components/saweria/test.astro'
 
-const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามคำสอนของพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้มูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
+const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
 `
 
-const msg2 = `เราฟังเทศและ worship ไปด้วยกันไปหาอะไรกินกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส`
+const msg2 = `เราฟังเทศและ worship  เรารับประทานอารหารด้วยกัน เราใช้เวลากับพระเจ้าและสร้างความสัมพันธ์ที่ดีกับพี่น้องในโบส หลังเลิกโบสเราจะเล่น Board Game กัน`
 const msg3 = `เราเป็นโบสเล็กๆที่เพิ่งตั้งในองค์กรคริสตจักรเมล็ดพันธุ์ที่สังกัดสหกิจคริสเตียน  มีสมาชิกที่เป็นกลุ่มนักศึกษาและกลุ่มคนวัยทำงาน เราเน้นความเป็นสมัยใหม่เพื่อรองรับกลุ่มคนรุ่นใหม่`
-const imagesCover = ['./covers/1.jpg', './covers/2.jpg']
 ---
 
-<Layout title="ＳＥＥＤＢＫＫ" description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น" pubDate={new Date('Septerber 09 2023')}>
+<Layout
+  title="ＳＥＥＤＢＫＫ"
+  description="โบสกรุงเทพตอนบ่าย โบสเมล็ดพันพันธุ์กรุงเทพ โบสวัยรุ่น"
+  pubDate={new Date('Septerber 09 2023')}
+>
   <Navbar />
-
+  <Test/>
   <Header />
-
   <Card body={msg} />
-  <br>
+  <br />
   <div class="custom-content container">
-    <div class="col-md-12 col-sm-12 col-12  " >
-      <img class="img-fluid rounded"  src="./peep_characters.png" alt="" />
+    <div class="col-md-12 col-sm-12 col-12">
+      <img class="img-fluid rounded" src="./peep_characters.png" alt="" />
     </div>
   </div>
   <CardWithTap title="What We do?" body={msg2} />
 
-<CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" imageCovers={imagesCover} />
+  <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" />
 
-<Footer />
+  <Footer />
 </Layout>
-
-
