"Removed test component and styles, updated BaseHeadSeedBKK to import efffectCards.css, and modified Header component to display Thai text."

--- a/src/components/saweria/ContainerCards.astro
+++ b/src/components/saweria/ContainerCards.astro
@@ -27,8 +27,8 @@
       </div>
     </div>
     <div class="content">
-      <img src="assets/Photographer.jpg" class="profession_image" alt="Profession" />
-      <img src="assets/Prince Akashi.jpg" class="profile_image" alt="Profile" />
+      <img src="hand.png" class="profession_image" alt="Profession" />
+      <img src="hand.png" class="profile_image" alt="Profile" />
       <div class="profile_detail">
         <span>Prince Akashi</span>
         <p>Photographer + Model</p>
@@ -40,8 +40,8 @@
       </div>
     </div>
     <div class="content">
-      <img src="assets/Fashion Designer.jpg" class="profession_image" alt="Profession" />
-      <img src="assets/Rafaella Mendes.jpg" class="profile_image" alt="Profile" />
+      <img src="./cover_1.jpg" class="professio_image" alt="Profession" />
+      <img src="./cover_2.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
         <span>Rafaella Mendes</span>
         <p>Fashion Designer + Model</p>
