--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -8,13 +8,13 @@ const isHasGod =
 
 <div class="custom-header container">
   <div class="custom-header-title">
-    <!-- <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1> -->
+    <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
     <div class="body-typing">
       <div class="container-typing">
         <div class="text_hide"></div>
         <!----------------------------->
         <!--Change the number of words in the text and the animation will still work-->
-        <h1 class="title-futuraHandwritten text">The Seed Of Bangkok City Church</h4>
+        <h4 class="text">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h4>
         <!-------------------------------------->
         <div class="text_cursor"></div>
       </div>
@@ -58,21 +58,6 @@ const isHasGod =
       easing: 'cubic-bezier(0,.26,.44,.93)',
     }
 
-    // document.querySelector('.text_cursor').animate(
-    //   [
-    //     {
-    //       opacity: 0,
-    //     },
-    //     {
-    //       opacity: 0,
-    //       offset: 0.7,
-    //     },
-    //     {
-    //       opacity: 1,
-    //     },
-    //   ],
-    //   cursor_timings
-    // )
 
     const cursorElement = document.querySelector('.text_cursor')
     if (cursorElement !== null) {
