--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -4,7 +4,7 @@
 import '../styles/saweria.css'
 import '../styles/navbar.css'
 import '../styles/header.css'
-import '../styles/test.css'
+import '../styles/efffectCards.css'
 import '../styles/typingEffect.css'
 interface Props {
   title: string
