--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from '$components/saweria/Card.astro'
 import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
-import Test from '@/components/saweria/test.astro'
+import ContainerCards from '@/components/saweria/ContainerCards.astro'
 
 const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
 `
@@ -20,7 +20,7 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
   pubDate={new Date('Septerber 09 2023')}
 >
   <Navbar />
-  <Test/>
+  <ContainerCards/>
   <Header />
   <Card body={msg} />
   <br />
