"Removed cover images, updated image paths and styles in ContainerCards.astro and efffectCards.css"

--- a/src/components/saweria/ContainerCards.astro
+++ b/src/components/saweria/ContainerCards.astro
@@ -1,56 +1,43 @@
-<!-- quick fix to load assets from github -->
-<!-- <base
-  href="https://rawcdn.githack.com/MuhammadHasann/component-frontend/7e3a0bced6f1b050e8d0b621f2a3a6e7b1cb06d3/section/category%20card-2/"
-/> -->
-<!-- lazy dog credit note -->
-<!-- <dialog open>
-  Reply to <a href="https://twitter.com/asanagih/status/1764194084435181573" target="_blank"> tweet</a> by <a
-    href="https://hasanmolla.vercel.app/"
-    target="_blank">HASAN MOLLA</a
-  >
-</dialog> -->
-
 <section class="container-cards">
   <div class="category_container">
     <div class="content">
-      <img src="./cover_1.jpg" class="professio_image" alt="Profession" />
-      <img src="./cover_2.jpg" class="profile_image" alt="Profile" />
+      <img src="./cardsEffect/card_cover_1_1.jpg" class="professio_image" alt="Profession" />
+      <img src="./cardsEffect/card_cover_1_2.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
-        <span>John Doe</span>
-        <p>UI/UX Designer + Graphic Designer</p>
+        <span>เติบโต</span>
+        <p>คำเทศนาเติบโตชีวิต</p>
       </div>
 
       <div class="wrapper">
         <div class="profile_quote">
-          <p>"UI is the saddle, the stirrups, & the reins. UX is the feeling you get being able to ride the horse."</p>
+          <p>"ฟังเสียงพระเจ้าผ่านคำเทศนา"</p>
         </div>
       </div>
     </div>
     <div class="content">
-      <img src="hand.png" class="profession_image" alt="Profession" />
-      <img src="hand.png" class="profile_image" alt="Profile" />
+      <img src="./cardsEffect/card_cover_2_1.jpg" class="profession_image" alt="Profession" />
+      <img src="./cardsEffect/card_cover_2_2.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
-        <span>Prince Akashi</span>
-        <p>Photographer + Model</p>
+        <span>รับประทานอาหาร</span>
+        <p>เติบโตฝ่ายร่างกาย</p>
       </div>
       <div class="wrapper">
         <div class="profile_quote">
-          <p>"If you see something that moves you, and then snap it, you keep a moment."</p>
+          <p>"รับประทานอาหารหลังเลิกโบส"</p>
         </div>
       </div>
     </div>
     <div class="content">
-      <img src="./cover_1.jpg" class="professio_image" alt="Profession" />
-      <img src="./cover_2.jpg" class="profile_image" alt="Profile" />
+      <img src="./cardsEffect/card_cover_3_2.jpg" class="professio_image" alt="Profession" />
+      <img src="./cardsEffect/card_cover_3_1.jpg" class="profile_image" alt="Profile" />
       <div class="profile_detail">
-        <span>Rafaella Mendes</span>
-        <p>Fashion Designer + Model</p>
+        <span>บอร์ดเกม</span>
+        <p>เวลาแห่งความสนุก</p>
       </div>
       <div class="wrapper">
         <div class="profile_quote">
           <p>
-            "My mission in life is not merely to survive, but to thrive and to do so with some passion, some compassion,
-            some humor, and some style."
+            "เล่นบอร์ดเกมหลังเลิกโบส เรามีมากกว่า7เกม"
           </p>
         </div>
       </div>
