"Added ImageMove component to index page, uncommented img tag in Header component"

--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -20,6 +20,7 @@ const isHasGod =
       </div>
     </div>
     <!--<img class="img-fluid rounded" width={600} height={272} src="./seed-anime.gif" alt="" /> -->
+     <!-- <img class="" width={600} height={272} src="./bg.jfif" alt="" /> -->
   </div>
   <div class="custom-nav">
     <a class="btn btn-enter" href={isHasGod}>
