--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
+import ImageMove from '@/components/saweria/imageMove.astro'
 
 const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
 `
@@ -20,8 +21,10 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
   pubDate={new Date('Septerber 09 2023')}
 >
   <Navbar />
-  <ContainerCards/>
+  <ImageMove />
   <Header />
+  <ContainerCards/>
+  <br />
   <Card body={msg} />
   <br />
   <div class="custom-content container">
