--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -22,7 +22,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
       <nav class="navbar navbar-expand-lg navbar-light navbar-line-seedbkk">
         <div class="container-fluid">
           <img class="rounded" width={48} height={48} src="./SEED_CHURCH_LOGO_3.png" alt="" />
-          <a class="navbar-brand title-futuraHandwritten" href="#"> SeedBKK</a>
+          <a class="navbar-brand title-futuraHandwritten" href="/"> SeedBKK</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,7 +37,13 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-lg-0 mb-2 me-auto">
               <li class="nav-item">
-                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="#">Card</a>
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/account">Account</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/invite">Invite</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/qrcode">QrCode</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href={ourChruch}>Our Chuch</a>
