--- a/src/styles/efffectCards.css
+++ b/src/styles/efffectCards.css
@@ -9,7 +9,7 @@
   flex-wrap: nowrap;
   gap: calc(var(--gap) * 2);
   width: 100%;
-  height: 100%;
+  height: 350px;
 }
 .content {
   --active: 0;
