"Removed ImageMove component from index.astro and added a new imageMove.astro component with carousel functionality."

--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -19,7 +19,8 @@ const isHasGod =
         <div class="text_cursor"></div>
       </div>
     </div>
-    <!--<img class="img-fluid rounded" width={600} height={272} src="./seed-anime.gif" alt="" /> -->
+    <!-- <img class="img-fluid rounded" width={600} height={272} src="./m6t4sv7x63y81.gif" alt="" />  -->
+    <!-- <img class="img-fluid rounded" width={600} height={272} src="./seed-anime.gif" alt="" /> -->
      <!-- <img class="" width={600} height={272} src="./bg.jfif" alt="" /> -->
   </div>
   <div class="custom-nav">
