"Removed console log in CardWithTap.astro, added new nav item in Navbar.astro, and deleted test.astro page."

--- a/src/components/saweria/CardWithTap.astro
+++ b/src/components/saweria/CardWithTap.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const { title, body, color, imageCovers = [] } = Astro.props
-console.log(`imags: ${imageCovers}`)
+// console.log(`imags: ${imageCovers}`)
 ---
 
 <div class="custom-pricing container">
