--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -37,6 +37,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-lg-0 mb-2 me-auto">
               <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Welcome</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/account">Account</a>
               </li>
               <li class="nav-item">
