--- a/src/pages/invite.astro
+++ b/src/pages/invite.astro
@@ -20,7 +20,7 @@ import ImageMove from '@/components/saweria/imageMove.astro'
 <div class="custom-content container">
 
   <!-- <Header /> -->
-  <img src="./profile/bussiness_card__seed_bkk_demo_v1-removebg.png" >
+  <img src="/profile/bussiness_card__seed_bkk_demo_v1-removebg.png" >
   <!-- <ContainerCards/> -->
   
 </div>
