"Updated image src paths in Header, Navbar, and qrcode pages to use absolute paths starting with '/' instead of relative paths."

--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -31,7 +31,7 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
           <p class="card-text">
             QRCODE WEB
             <br />
-            <img src="./icons/seedchbkk.png" width={350} height={350} />
+            <img src="/icons/seedchbkk.png" width={350} height={350} />
           </p>
         </div>
       </div>
