--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -11,7 +11,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     <div class="d-flex justify-content-center">
       <div class="bg-border-time">
         <h3 class="title-futuraHandwritten border-time">
-          <img src="./icons/stopwatch.png" alt="" width="32" height="32" class="rounded" />
+          <img src="/icons/stopwatch.png" alt="" width="32" height="32" class="rounded" />
            Worship time Sunday 14.00-16.00
         </h3>
       </div>
@@ -21,7 +21,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
     <div class="d-flex justify-content-center test" >
       <nav class="navbar navbar-expand-lg navbar-light navbar-line-seedbkk">
         <div class="container-fluid">
-          <img class="rounded" width={48} height={48} src="./SEED_CHURCH_LOGO_3.png" alt="" />
+          <img class="rounded" width={48} height={48} src="/SEED_CHURCH_LOGO_3.png" alt="" />
           <a class="navbar-brand title-futuraHandwritten" href="/"> SeedBKK</a>
           <button
             class="navbar-toggler"
