--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -21,7 +21,7 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
   pubDate={new Date('Septerber 09 2023')}
 >
   <Navbar />
-  <ImageMove />
+  <!-- <ImageMove /> -->
   <Header />
 
   <div class="custom-content container">
