"Updated image src path from relative to absolute"

--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -26,7 +26,7 @@ import ImageMove from '@/components/saweria/imageMove.astro'
              <h4>บัญชีธนาคาร คริสตจักรเมล็ดพันธุ์กรุงเทพ</h4>
              <h4>ธนาคารไทยพานิชย์ สาขาสยามพารากอน</h4>
              <h1>
-                <img src="./icons/SCB.BK_BIG-b5007084.png" width="200" height="64">
+                <img src="/icons/SCB.BK_BIG-b5007084.png" width="200" height="64">
                 218-289481-4
             </h1>
             <p>ชื่อบัญชี น.ส เอกมณีและนันทิพัฒน์และนางวัธนี </p>
