"Removed three PNG images and updated image sources in Footer, invite, and qrcode pages"

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date()
 
 <footer>
   <a href="https://www.facebook.com/seedchurchthailand" target="_blank">
-    <img src="./SEED_CHURCH_LOGO_3.png" width={64} height={64} />
+    <img src="/SEED_CHURCH_LOGO_3.png" width={64} height={64} />
   </a> MADE WITH THE ❤️ 
   <Social />
 </footer>
