--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -6,6 +6,7 @@ import '../styles/navbar.css'
 import '../styles/header.css'
 import '../styles/efffectCards.css'
 import '../styles/typingEffect.css'
+import '../styles/loopImages.css'
 interface Props {
   title: string
   description: string
