--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import CardWithTap from '$components/saweria/CardWithTap.astro'
 import Layout from '../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
 import ContainerCards from '@/components/saweria/ContainerCards.astro'
-import ImageMove from '@/components/saweria/imageMove.astro'
+import LoopImages from '@/components/saweria/LoopImages.astro'
 
 const msg = `เราคือชุมชนคริสเตียน คริสเตียนคือคนที่เชื่อ รัก และติดตามพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย หากคุณสนใจที่จะรู้จักเรื่องราวของพระเจ้าเพิ่มเติม เรายินดีที่ให้ข้อมูลเพื่อที่คุณจะได้รู้จักเรื่องราวพระเจ้ามากขึ้น
 `
@@ -22,6 +22,7 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
 >
   <Navbar />
   <Header />
+
   <ContainerCards/>
   <br />
   <Card body={msg} />
@@ -34,6 +35,6 @@ const msg3 = `เราเป็นโบสเล็กๆที่เพิ่
   <CardWithTap title="What We do?" body={msg2} />
 
   <CardWithTap title="เราเป็นโบสถ์แบบไหน?" body={msg3} color="#f5bfd2" />
-
+  <LoopImages />P
   <Footer />
 </Layout>
