"Added Josefin Slab font to BaseHeadSeedBKK, updated font sizes and styles in Header, removed redundant image tags in LoopImages, and updated font family in loopImages.css"

--- a/src/components/BaseHeadSeedBKK.astro
+++ b/src/components/BaseHeadSeedBKK.astro
@@ -34,6 +34,12 @@ const { title, description, image = './SEED_CHURCH_LOGO_3.png' } = Astro.props
   href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
   rel="stylesheet"
 />
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+  rel="stylesheet"
+/>
+
 <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 
 <!-- Canonical URL -->
