--- a/src/components/saweria/Header.astro
+++ b/src/components/saweria/Header.astro
@@ -8,13 +8,13 @@ const isHasGod =
 
 <div class="custom-header container">
   <div class="custom-header-title">
-    <h1 class="title-futuraHandwritten">The Seed Of Bangkok City Church</h1>
+    <h1 class="title-futuraHandwritten" style="font-size: 4em;">The Seed Of Bangkok City Church</h1>
     <div class="body-typing">
       <div class="container-typing">
         <div class="text_hide"></div>
         <!----------------------------->
         <!--Change the number of words in the text and the animation will still work-->
-        <h4 class="text">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h4>
+        <h4 class="text" style="font-size: 4em;">คริสตจักรเมล็ดพันธุ์กรุงเทพ</h4>
         <!-------------------------------------->
         <div class="text_cursor"></div>
       </div>
