--- a/src/components/saweria/LoopImages.astro
+++ b/src/components/saweria/LoopImages.astro
@@ -3,10 +3,7 @@
 ---
 
 <div class="loop_css1">
-  <!--       <img src="img.jpg"><img src="img.jpg"> -->
-  <img src="/loop/actions.png">
+  <img src="/loop/actions.png" />
 
-  <img src="/loop/actions.png">
-
-
+  <img src="/loop/actions.png" />
 </div>
