--- a/src/styles/loopImages.css
+++ b/src/styles/loopImages.css
@@ -124,7 +124,7 @@
     flex: 0 0 auto;
     padding: 24px 12px;
     font-size: 2.4rem;
-    font-family: "Josefin Slab", serif;
+    font-family: "Bai Jamjuree","Josefin Slab", serif;
     white-space: nowrap;
     will-change: transform;
   }
