"Added 'Care' link to Navbar and updated image paths in Care page to use absolute URLs"

--- a/src/pages/care.astro
+++ b/src/pages/care.astro
@@ -29,8 +29,8 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
    <section class="container-cards">
     <div class="category_container">
       <div class="content">
-        <img src="./cardsEffect2/place1.jpg" class="professio_image" alt="Profession" />
-        <img src="./cardsEffect2/place2.jpg" class="profile_image" alt="Profile" />
+        <img src="/cardsEffect2/place1.jpg" class="professio_image" alt="Profession" />
+        <img src="/cardsEffect2/place2.jpg" class="profile_image" alt="Profile" />
         <div class="profile_detail">
           <span>สถานที่</span>
           <p></p>
@@ -43,8 +43,8 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
         </div>
       </div>
       <div class="content">
-        <img src="./cardsEffect2/care2.jpg" class="profession_image" alt="Profession" />
-        <img src="./cardsEffect2/care1.jpg" class="profile_image" alt="Profile" />
+        <img src="/cardsEffect2/care2.jpg" class="profession_image" alt="Profession" />
+        <img src="/cardsEffect2/care1.jpg" class="profile_image" alt="Profile" />
         <div class="profile_detail">
           <span>ห้องประชุม</span>
           <p></p>
@@ -56,8 +56,8 @@ import LoopImages from '@/components/saweria/LoopImages.astro'
         </div>
       </div>
       <div class="content">
-        <img src="./cardsEffect2/cafe1.jpg" class="professio_image" alt="Profession" />
-        <img src="./cardsEffect2/cafe2.jpg" class="profile_image" alt="Profile" />
+        <img src="/cardsEffect2/cafe1.jpg" class="professio_image" alt="Profession" />
+        <img src="/cardsEffect2/cafe2.jpg" class="profile_image" alt="Profile" />
         <div class="profile_detail">
           <span>SCC Creative Space</span>
           <p></p>
