--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -40,6 +40,9 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Welcome</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Care</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/account">Account</a>
               </li>
               <li class="nav-item">
