--- a/src/components/saweria/Navbar.astro
+++ b/src/components/saweria/Navbar.astro
@@ -40,7 +40,7 @@ const ourChruch = 'https://www.seedchurch-thailand.com/'
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Welcome</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/welcome">Care</a>
+                <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/care">Care</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold fs-4 title-futuraHandwritten" href="/account">Account</a>
